docs/releases/v0.2.0/GATE-STATUS.md
# GATE_STATUS — v0.2.0 accepted snapshot

```yaml
version: v0.2.0
status: PASSED
tested_implementation_commit: "adc505fdd471eaccacb73a5e1247d60be83dd808"
base_commit: "a28bb7516518dfda7c24b1336a435439848082a1"
branch: "codex/v0.2.0-machine-vertical-slice"
build: "1.20.1-0.2.0-dev"
upstream_commit: "c5cd5af62fc07cd4e0d24f06a16033f181c47c04"
provenance_review: APPROVED
pull_request: "https://github.com/sunthemoon/AdvancedRocketry-Community/pull/6"
forge_ci: "https://github.com/sunthemoon/AdvancedRocketry-Community/actions/runs/33352199793"
governance_ci: "https://github.com/sunthemoon/AdvancedRocketry-Community/actions/runs/33352199800"
pull_request_checks: 3/3_PASS
gates:
  G0: PASS
  G1: PASS
  G2: PASS
  G3: PASS
  G4: PASS
  G5: PASS
  G6: PASS
  G7: PASS
  G8: PASS
  G9: PASS
overall: PASSED
remaining_items: []
human_approved_by: "sunthemoon"
human_approved_at: "2026-08-31"
```

Exact tested implementation head `adc505fdd471eaccacb73a5e1247d60be83dd808`
passed all three pull-request checks. Repository owner `sunthemoon` explicitly
approved G0, G8, and G9 on 2026-08-31 against the evidence and artifact hashes
in this directory.

The accepted 173,080-byte main JAR has SHA-256
`a8356cbeafdaffbd1192628c414c6996c402a757f6211c857d87e8ead52a2598`.
This snapshot records milestone acceptance only. No tag or public release was
created, and the build remains an unreleased developer preview.
