docs/releases/v0.3.0/GATE-STATUS.md
# GATE_STATUS — v0.3.0 accepted snapshot

```yaml
version: v0.3.0
status: PASSED
tested_implementation_commit: "63d159ef3d9e489862b0d517b76bcc523df852c9"
base_commit: "11d0ba48b98c3a520948e83988a46a713c9fa08d"
branch: "codex/v0.3.0-celestial-codec"
build: "1.20.1-0.3.0-dev"
upstream_commit: "c5cd5af62fc07cd4e0d24f06a16033f181c47c04"
provenance_review: APPROVED
pull_request: "https://github.com/sunthemoon/AdvancedRocketry-Community/pull/7"
forge_ci: "https://github.com/sunthemoon/AdvancedRocketry-Community/actions/runs/33379022611"
governance_ci: "https://github.com/sunthemoon/AdvancedRocketry-Community/actions/runs/33379022601"
pull_request_checks: 3/3_PASS
gates:
  G0: PASS
  G1: PASS
  G2: PASS
  G3: PASS
  G4: PASS
  G5: PASS
  G6: PASS
  G7: PASS
  G8: PASS
  G9: PASS
overall: PASSED
remaining_items: []
human_approved_by: "sunthemoon"
human_approved_at: "2026-08-31"
```

Exact tested implementation head `63d159ef3d9e489862b0d517b76bcc523df852c9`
and PR technical checkpoint `9a7f4db6d8308cc772ddb98fd32d45d3d3d572e0`
passed all three pull-request checks. Repository owner `sunthemoon` explicitly
approved G0, G8, and G9 on 2026-08-31 against the evidence and artifact hashes
in this directory.

The accepted 296,189-byte main JAR has SHA-256
`920425eaeb8cf8b6e94f23ed3086ca290ae734315059bbcf8eea100272d8bdfb`.
This snapshot records milestone acceptance only. No tag or public release was
created, and the build remains an unreleased developer preview.
